basic support for gphoto2 cameras/DSLRs